feat: reduce memory allocations